--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
 
 
 <!-- Video carousel -->
+
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
@@ -252,15 +253,14 @@
     </div>
   </div>
 </section>
+
 <!-- End video carousel -->
 
 
 
 
-
-
 <!-- Paper poster -->
-<section class="hero is-small is-light">
+<!-- <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title">Poster</h2>
@@ -270,7 +270,7 @@
         
       </div>
     </div>
-  </section>
+  </section> -->
 <!--End paper poster -->
 
 
