--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>Academic Project Page</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/cv.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
@@ -129,7 +129,6 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
-        <div class="content has-text-justified">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna feugiat nibh elementum, et tempor dolor mattis. Donec accumsan enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex eget mauris cursus euismod nec et nibh. Maecenas ac gravida ante, nec cursus dui. Vivamus purus nibh, placerat ac purus eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus gravida commodo. Pellentesque auctor leo vitae sagittis suscipit.
           </p>
@@ -141,47 +140,42 @@
 <!-- End paper abstract -->
 
 
-<!-- Image carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          First image description.
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          Second image description.
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-         Third image description.
-       </h2>
-     </div>
-     <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        Fourth image description.
-      </h2>
+
+  <section class="section" id="BibTeX">
+    <div class="container is-max-desktop content">
+      <h1 class="title" style="text-align: center;">Strong Generalization Ability in Scattering-affected Scenarios</h1>
+      <div style="display: flex; justify-content: space-between; width: 100%;">
+          <iframe frameborder="0" class="juxtapose" width="31%" height="180" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=bcce26d8-3bca-11f0-bb24-0936e1cb08fb"></iframe>
+          <iframe frameborder="0" class="juxtapose" width="31%" height="180" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=bcce26d8-3bca-11f0-bb24-0936e1cb08fb"></iframe>
+          <iframe frameborder="0" class="juxtapose" width="31%" height="180" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=bcce26d8-3bca-11f0-bb24-0936e1cb08fb"></iframe>
+        </div>
+        <p>Test</p>
     </div>
-  </div>
-</div>
-</div>
 </section>
-<!-- End image carousel -->
 
+<section class="section" id="BibTeX">
+    <div class="container is-max-desktop content">
+      <h1 class="title" style="text-align: center;">Methods</h1>
+      <div style="display: flex; justify-content: space-between; width: 100%;">
+          <iframe frameborder="0" class="juxtapose" width="31%" height="180" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=bcce26d8-3bca-11f0-bb24-0936e1cb08fb"></iframe>
+          <iframe frameborder="0" class="juxtapose" width="31%" height="180" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=bcce26d8-3bca-11f0-bb24-0936e1cb08fb"></iframe>
+          <iframe frameborder="0" class="juxtapose" width="31%" height="180" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=bcce26d8-3bca-11f0-bb24-0936e1cb08fb"></iframe>
+        </div>
+        <p>This is Methods</p>
+    </div>
+</section>
 
-<iframe frameborder="0" class="juxtapose" width="20%" height="360" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=bcce26d8-3bca-11f0-bb24-0936e1cb08fb"></iframe>
+<section class="section" id="BibTeX">
+    <div class="container is-max-desktop content">
+      <h1 class="title" style="text-align: center;">Visual Comparisons</h1>
+      <div style="display: flex; justify-content: space-between; width: 100%;">
+          <iframe frameborder="0" class="juxtapose" width="31%" height="180" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=bcce26d8-3bca-11f0-bb24-0936e1cb08fb"></iframe>
+          <iframe frameborder="0" class="juxtapose" width="31%" height="180" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=bcce26d8-3bca-11f0-bb24-0936e1cb08fb"></iframe>
+          <iframe frameborder="0" class="juxtapose" width="31%" height="180" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=bcce26d8-3bca-11f0-bb24-0936e1cb08fb"></iframe>
+        </div>
+        <p>This is Methods</p>
+    </div>
+</section>
 
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
@@ -190,15 +184,21 @@
       <pre><code>BibTex Code Here</code></pre>
     </div>
 </section>
+
+<section class="section" id="BibTeX">
+    <div class="container is-max-desktop content">
+      <h2 class="title">Contact</h2>
+      Contact Me: <a href="mailto:YOUR EMAIL HERE">YOUR EMAIL HERE</a><br>
+    </div>
+</section>
 <!--End BibTex citation -->
 
 
-  <footer class="footer">
+<footer class="footer">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-8">
         <div class="content">
-
           <p>
             This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a> which was adopted from the <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
             You are free to borrow the source code of this website, we just ask that you link back to this page in the footer. <br> This website is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
