--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>Academic Project Page</title>
-  <link rel="icon" type="image/x-icon" href="static/images/cv.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
@@ -188,7 +188,7 @@
 <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">Contact</h2>
-      Contact Me: <a href="mailto:YOUR EMAIL HERE">YOUR EMAIL HERE</a><br>
+      Contact Me
     </div>
 </section>
 <!--End BibTex citation -->
