--- a/index.html
+++ b/index.html
@@ -188,13 +188,14 @@
 <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">Contact</h2>
-      Contact Me
+      If you have any questions, please contact Donghui Yang! His email is <a href="mailto:YOUR EMAIL HERE">yangdonghui@mail.dlut.edu.cn</a>.<br>
     </div>
 </section>
+
 <!--End BibTex citation -->
 
 
-<footer class="footer">
+<!-- <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-8">
@@ -209,7 +210,7 @@
       </div>
     </div>
   </div>
-</footer>
+</footer> -->
 
 <!-- Statcounter tracking code -->
   
